--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -49,7 +49,7 @@
                     <ul class="nav--main mbn">
                         <li><a href="{{ urlFor('groups') }}" title="groups">Repository Groups</a></li>
                         <li><a href="{{ urlFor('servers') }}" title="servers">Servers</a></li>
-                        <li><a href="{{ urlFor('user.current') }}" title="profile">My Profile</a></li>
+                        <li><a href="{{ urlFor('profile') }}" title="profile">Profile</a></li>
                         {% if isUserAdmin(account) %}
                             <li><a href="{{ urlFor('admin.repos') }}" title="admin dashboard">Admin</a></li>
                         {% endif %}
@@ -70,20 +70,6 @@
                     {% for message in session.getFlash() %}
                         <p>{{ message }}</p>
                     {% endfor %}
-                </div>
-            {% endif %}
-        {% endblock %}
-        {% block messages %}
-            {# GLOBAL NOTICE #}
-            {% if notice %}
-                <div class="alert-bar">
-                    <p>{{ notice }}</p>
-                </div>
-            {% endif %}
-            {# GLOBAL ERROR #}
-            {% if error %}
-                <div class="alert-bar">
-                    <p>{{ error }}</p>
                 </div>
             {% endif %}
         {% endblock %}
