--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -48,10 +48,10 @@
                 <nav role="navigation">
                     <ul class="nav--main mbn">
                         <li><a href="{{ urlFor('groups') }}" title="groups">Repository Groups</a></li>
-                        <li><a href="{{ urlFor('servers') }}">Servers</a></li>
-                        <li><a href="{{ urlFor('profile') }}">Profile</a></li>
+                        <li><a href="{{ urlFor('servers') }}" title="servers">Servers</a></li>
+                        <li><a href="{{ urlFor('profile') }}" title="profile">Profile</a></li>
                         {% if isUserAdmin(account) %}
-                            <li><a href="{{ urlFor('admin_repositories') }}" title="admin dashboard">Admin</a></li>
+                            <li><a href="{{ urlFor('admin.repos') }}" title="admin dashboard">Admin</a></li>
                         {% endif %}
                         <li><a href="{{ urlFor('logout') }}" title="logout">Logout</a></li>
                     </ul>
