--- a/app/templates/environment/admin.reorder.twig
+++ b/app/templates/environment/admin.reorder.twig
@@ -1,6 +1,6 @@
 {% extends 'admin/admin.html.twig' %}
 
-{% set page_title = "Environments" %}
+{% set page_title = "Reorder Environments" %}
 
 {% block content %}
     <h2>Reorder Environments</h2>
