--- a/app/templates/environment/environment.twig
+++ b/app/templates/environment/environment.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% set page_title = env.key~" environment" %}
+{% set page_title = 'Environment: '~env.key %}
 
 {% block content %}
     <h2>{{ env.key }} environment</h2>
