--- a/app/templates/environment/admin.edit.twig
+++ b/app/templates/environment/admin.edit.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% set page_title = 'Edit '~env.key~' environment' %}
+{% set page_title = 'Edit Environment: '~env.key %}
 
 {% block content %}
     <h2>{{ env.key }} environment</h2>
