--- a/app/templates/user/user.edit.twig
+++ b/app/templates/user/user.edit.twig
@@ -1,4 +1,4 @@
-{% extends "profile.twig" %}
+{% extends "user/user.twig" %}
 
 {% set page_title = 'Edit Profile: '~ldapUser.firstName~' '~ldapUser.lastName %}
 
@@ -7,8 +7,8 @@
 {% endblock %}
 
 {% block actions %}
-    <input class="btn" type="submit" value="Update Profile">
-    <a href="{{ urlFor('profile', {'id': profileUser.id}) }}">Cancel</a>
+    <input class="btn" type="submit" value="Save">
+    <a href="{{ urlFor('user', {'id': profileUser.id}) }}">Cancel</a>
 {% endblock %}
 
 {% block content %}
@@ -16,4 +16,3 @@
     {{ parent() }}
 </form>
 {% endblock %}
-
