--- a/app/templates/error.html.twig
+++ b/app/templates/error.html.twig
@@ -6,5 +6,8 @@
     <div class="error-page">
         <h1>{{ message }}</h1>
         <img src="/img/error/{{ random(['blink.gif', 'walk.gif']) }}" />
+        <p>
+            The 9000 series has a perfect operational record. It can only be attributable to human error.
+        </p>
     </div>
 {% endblock %}
