--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -82,7 +82,7 @@ $micro-text: ms(-3);
 // Set your default font stack and headline font options.
 ///
 $typeface: sans-serif;
-$headline-font: "futura-pt", sans-serif;
+$headline-font: sans-serif;
 $headline-weight: normal;
 
 @import "partials/colors";
