--- a/sass/style.scss
+++ b/sass/style.scss
@@ -41,6 +41,7 @@
 // Example: use @import "partials/nav" if you are adding style to the nav object.
 ///
 @import "partials/global";
+@import "partials/icons";
 @import "partials/js";
 @import "partials/base/forms";
 @import "partials/base/tables";
