--- a/app/templates/build.twig
+++ b/app/templates/build.twig
@@ -29,7 +29,14 @@
                 </tr>
                 <tr>
                     <td>Commit</td>
-                    <td><a href="{{ githubCommit(build.repository.githubUser, build.repository.githubRepo, build.commit) }}">{{ build.commit[:7] }}</a></td>
+                    <td>
+                        <a href="{{ githubCommit(build.repository.githubUser, build.repository.githubRepo, build.commit) }}">{{ build.commit[:7] }}</a>
+                        <span class="icon">
+                            <svg viewBox="0 0 32 32">
+                                <use xlink:href="#github"></use>
+                            </svg>
+                        </span>
+                    </td>
                 </tr>
                 <tr>
                     <td>Status</td>
