--- a/app/templates/push.twig
+++ b/app/templates/push.twig
@@ -42,7 +42,14 @@
                 </tr>
                 <tr>
                     <td>Commit</td>
-                    <td><a href="{{ githubCommit(push.build.repository.githubUser, push.build.repository.githubRepo, push.build.commit) }}">{{ push.build.commit[:7] }}</a></td>
+                    <td>
+                        <a href="{{ githubCommit(push.build.repository.githubUser, push.build.repository.githubRepo, push.build.commit) }}">{{ push.build.commit[:7] }}</a>
+                        <span class="icon">
+                            <svg viewBox="0 0 32 32">
+                                <use xlink:href="#github"></use>
+                            </svg>
+                        </span>
+                    </td>
                 </tr>
                 <tr>
                     <td>Status</td>
