--- a/app/templates/repository.build.start.twig
+++ b/app/templates/repository.build.start.twig
@@ -16,9 +16,14 @@
     <ul class="check-list">
     {% for branch in branches %}
         <li>
-            <input id="{{ branch.object.sha }}-{{ branch.name }}" type="radio" name="commitish" value="{{ branch.name }}">
+            <input id="{{ branch.object.sha }}-{{ branch.name }}" type="radio" name="commitish" value="{{ branch.ref }}">
             <label for="{{ branch.object.sha }}-{{ branch.name }}">
-                {{ branch.name }} (<a href="{{ githubTreeish(repo.GithubUser, repo.GithubRepo, branch.name) }}">{{ branch.object.sha[:7] }}</a>)
+                {{ branch.name }} (<a href="{{ githubTreeish(repo.GithubUser, repo.GithubRepo, branch.name) }}">{{ branch.object.sha[:7] }}</a>
+                    <span class="icon">
+                        <svg viewBox="0 0 32 32">
+                            <use xlink:href="#github"></use>
+                        </svg>
+                    </span>)
             </label>
         </li>
     {% else %}
@@ -30,9 +35,14 @@
     <ul class="check-list">
     {% for tag in tags %}
         <li>
-            <input id="{{ tag.object.sha }}-{{ tag.name }}" type="radio" name="commitish" value="tag/{{ tag.name }}">
+            <input id="{{ tag.object.sha }}-{{ tag.name }}" type="radio" name="commitish" value="{{ tag.ref }}">
             <label for="{{ tag.object.sha }}-{{ tag.name }}">
-                {{ tag.name }} (<a href="{{ githubTreeish(repo.GithubUser, repo.GithubRepo, tag.name) }}">{{ tag.object.sha[:7] }}</a>)
+                {{ tag.name }} (<a href="{{ githubTreeish(repo.GithubUser, repo.GithubRepo, tag.name) }}">{{ tag.object.sha[:7] }}</a>
+                    <span class="icon">
+                        <svg viewBox="0 0 32 32">
+                            <use xlink:href="#github"></use>
+                        </svg>
+                    </span>)
             </label>
         </li>
     {% else %}
@@ -44,8 +54,14 @@
     <ul class="check-list">
         {% for pull in pulls %}
             <li class="pr-selection">
-                <input id="pr{{ pull.number }}" type="radio" name="commitish" value="pull/{{ pull.number }}">
-                <label for="pr{{ pull.number }}">{{ pull.title }} (<a href="{{ githubPullRequest(repo.githubUser, repo.githubRepo, pull.number) }}">PR #{{ pull.number }}</a>)</label>
+                <input id="pr{{ pull.number }}" type="radio" name="commitish" value="pull{{ pull.number }}">
+                <label for="pr{{ pull.number }}">{{ pull.title }} (<a href="{{ githubPullRequest(repo.githubUser, repo.githubRepo, pull.number) }}">PR #{{ pull.number }}</a>
+                    <span class="icon">
+                        <svg viewBox="0 0 32 32">
+                            <use xlink:href="#github"></use>
+                        </svg>
+                    </span>)
+                </label>
                 <p>
                     <span class="{{ pull.state }}">[{{ pull.state }}]</span>
                     <code>{{ pull.base.ref }} <-- {{ pull.head.user.login }}/{{ pull.head.ref }}</code>
@@ -59,7 +75,7 @@
     <h4>Commit</h4>
     <ul class="check-list form-wrapper">
         <li>
-            <input id="push-commit" type="radio" name="commitish" value="none">
+            <input id="push-commit" type="radio" name="commitish" value="commit">
             <label for="push-commit">Specific Commit ID:</label>
             <input class="text-input" type="text" name="hash">
         </li>
