--- a/app/templates/repository.twig
+++ b/app/templates/repository.twig
@@ -41,7 +41,14 @@
                         {% if status.success %}
                             <td><a href="{{ urlFor('build', {'repo': repo.id, 'build': status.success.build.id}) }}">{{ status.success.build.id[:10] }}</a></td>
                             <td>{{ status.success.build.branch[:20] }}</td>
-                            <td><a href="{{ githubCommit(repo.githubUser, repo.githubRepo, status.success.build.commit) }}">{{ status.success.build.commit[:7] }}</a></td>
+                            <td>
+                                <a href="{{ githubCommit(repo.githubUser, repo.githubRepo, status.success.build.commit) }}">{{ status.success.build.commit[:7] }}</a>
+                                <span class="icon">
+                                    <svg viewBox="0 0 32 32">
+                                        <use xlink:href="#github"></use>
+                                    </svg>
+                                </span>
+                            </td>
                             <td>{{ status.success.end|date }}</td>
                             <td><a href="{{ urlFor('rollback', {'repo': repo.key, 'server': status.success.deployment.server.id}) }}">Rollback</a></td>
                         {% else %}
@@ -75,7 +82,14 @@
             <tbody>
                 <tr>
                     <td>Github Location</td>
-                    <td><a href="{{ githubRepo(repo.githubUser, repo.githubRepo) }}">{{ repo.githubUser }}/{{ repo.githubRepo }}</a></td>
+                    <td>
+                        <a href="{{ githubRepo(repo.githubUser, repo.githubRepo) }}">{{ repo.githubUser }}/{{ repo.githubRepo }}</a>
+                        <span class="icon">
+                            <svg viewBox="0 0 32 32">
+                                <use xlink:href="#github"></use>
+                            </svg>
+                        </span>
+                    </td>
                 </tr>
                 <tr>
                     <td>Contact Email</td>
