--- a/app/templates/repository.build.start.twig
+++ b/app/templates/repository.build.start.twig
@@ -59,7 +59,7 @@
     <h4>Commit</h4>
     <ul class="check-list form-wrapper">
         <li>
-            <input id="push-commit" type="radio" name="commitish" value="commit">
+            <input id="push-commit" type="radio" name="commitish" value="none">
             <label for="push-commit">Specific Commit ID:</label>
             <input class="text-input" type="text" name="hash">
         </li>
