Build add group pages

--- a/app/templates/environment/environment.twig
+++ b/app/templates/environment/environment.twig
@@ -3,7 +3,7 @@
 {% set page_title = 'Environment: '~env.key %}
 
 {% block content %}
-    <h2>{{ env.key }} environment</h2>
+    <h2><strong>{{ env.key }}</strong> environment</h2>
 
     <h3>Servers</h3>
     <ul>
