--- a/app/templates/server/server.twig
+++ b/app/templates/server/server.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    <h2>{{ server.name }}</h2>
+    <h2><strong>{{ server.name }}</strong> server</h2>
 
     <h3>Environment</h3>
     <p>{{ server.environment.key }}</p>
