--- a/app/templates/admin/admin.html.twig
+++ b/app/templates/admin/admin.html.twig
@@ -4,7 +4,7 @@
 <nav role="navigation">
     <ul class="nav--admin">
         <li><a href="{{ urlFor('admin.repos') }}" title="Manage Repositories">Repositories</a></li>
-        <li><a href="{{ urlFor('admin.groups') }}" title="Manage Repository Groups">Repository Groups</a></li>
+        <li><a href="{{ urlFor('groups') }}" title="Manage Repository Groups">Repository Groups</a></li>
         <li><a href="{{ urlFor('servers') }}" title="Manage Servers">Servers</a></li>
         <li><a href="{{ urlFor('environments') }}" title="Manage Environments">Environments</a></li>
         <li><a href="{{ urlFor('users') }}" title="Manage Users">Users</a></li>
