Clean up minor copy and code efficiencies

--- a/app/templates/environment/admin.edit.twig
+++ b/app/templates/environment/admin.edit.twig
@@ -3,7 +3,7 @@
 {% set page_title = 'Edit Environment: '~env.key %}
 
 {% block content %}
-    <h2>{{ env.key }} environment</h2>
+    <h2>Edit <strong>{{ env.key }}</strong> environment</h2>
 
     <div class="form-wrapper">
         {% if errors %}
