--- a/app/templates/server/admin.edit.twig
+++ b/app/templates/server/admin.edit.twig
@@ -3,7 +3,8 @@
 {% set page_title = 'Edit Server: '~server.name %}
 
 {% block content %}
-    <h3>Add a new server</h3>
+    <h2>Edit <strong>{{ server.name }}</strong> server</h2>
+
     <div class="form-wrapper">
         {% if errors %}
             <ul class="error-list">
