Fix bad verbiage

--- a/app/templates/environment/environment.twig
+++ b/app/templates/environment/environment.twig
@@ -15,7 +15,7 @@
     </ul>
 
     {% if isAdmin and servers %}
-        <p><strong>Note:</strong> All associated servers must be removed or transferred to another environment to remove this environment.</p>
+        <p><strong>Note:</strong> All associated servers must be removed or transferred to remove this environment.</p>
     {% endif %}
 
     {# primary action #}
