--- a/app/templates/group/group.twig
+++ b/app/templates/group/group.twig
@@ -49,7 +49,7 @@
     </ul>
 
     {% if isAdmin and repos %}
-        <p><strong>Note:</strong> All associated repositories must be removed or transferred to another group to remove this group.</p>
+        <p><strong>Note:</strong> All associated repositories must be removed or transferred to remove this group.</p>
     {% endif %}
 
     {# primary action #}
