--- a/app/templates/server/server.twig
+++ b/app/templates/server/server.twig
@@ -18,7 +18,7 @@
     </ul>
 
     {% if isAdmin and deployments %}
-        <p><strong>Note:</strong> All associated deployments must be removed or transferred to another server to remove this server.</p>
+        <p><strong>Note:</strong> All associated deployments must be removed or transferred to remove this server.</p>
     {% endif %}
 
     {# primary action #}
