--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -43,12 +43,22 @@
                 {% if account %}
                 <nav role="navigation">
                     <ul class="nav--main mbn">
-                        <li><a href="{{ urlFor('groups') }}" title="groups">Repository Groups</a></li>
+                        <li>
+                            <a href="{{ urlFor('hello') }}" title="Home">
+                                <span class="icon" style="fill:white"><svg viewBox="0 0 32 32">
+                                    <use xlink:href="#home"></use>
+                                </svg></span>
+                            </a>
+                        </li>
+                        <li><a href="{{ urlFor('groups') }}" title="groups">Groups</a></li>
                         <li><a href="{{ urlFor('servers') }}" title="servers">Servers</a></li>
-                        <li><a href="{{ urlFor('profile') }}" title="profile">Profile</a></li>
                         {% if isUserAdmin(account) %}
-                            <li><a href="{{ urlFor('admin.repos') }}" title="admin dashboard">Admin</a></li>
+                            <li><a href="{{ urlFor('admin.repos') }}" title="repositories">Repositories</a></li>
+                            <li><a href="{{ urlFor('environments') }}" title="environments">Environments</a></li>
+                            <li><a href="{{ urlFor('users') }}" title="users">Users</a></li>
+                            <li><a href="{{ urlFor('admin.dashboard') }}" title="admin dashboard">Admin</a></li>
                         {% endif %}
+                        <li><a href="{{ urlFor('user.current') }}" title="profile">Profile</a></li>
                         <li><a href="{{ urlFor('logout') }}" title="logout">Logout</a></li>
                     </ul>
                 </nav>
@@ -66,6 +76,20 @@
                     {% for message in session.getFlash() %}
                         <p>{{ message }}</p>
                     {% endfor %}
+                </div>
+            {% endif %}
+        {% endblock %}
+        {% block messages %}
+            {# GLOBAL NOTICE #}
+            {% if notice %}
+                <div class="alert-bar">
+                    <p>{{ notice }}</p>
+                </div>
+            {% endif %}
+            {# GLOBAL ERROR #}
+            {% if error %}
+                <div class="alert-bar">
+                    <p>{{ error }}</p>
                 </div>
             {% endif %}
         {% endblock %}
