--- a/app/templates/hello.twig
+++ b/app/templates/hello.twig
@@ -9,3 +9,9 @@
     <p>I'm Hal... introductions and salutations.</p>
 
 {% endblock %}
+
+{# ideas for this page:
+    - list of the most recent pushes
+    - "hot" or "active" repositories -> shortcuts right to their deployment page
+    - Most recent builds/pushes triggered by this user and their status (and if they are still the latest deployment for that repo)
+#}
