Update routes for repository CRUDs and add stub classes

--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -53,7 +53,7 @@
                         <li><a href="{{ urlFor('groups') }}" title="groups">Groups</a></li>
                         <li><a href="{{ urlFor('servers') }}" title="servers">Servers</a></li>
                         {% if isUserAdmin(account) %}
-                            <li><a href="{{ urlFor('admin.repos') }}" title="repositories">Repositories</a></li>
+                            <li><a href="{{ urlFor('repositories') }}" title="repositories">Repositories</a></li>
                             <li><a href="{{ urlFor('environments') }}" title="environments">Environments</a></li>
                             <li><a href="{{ urlFor('users') }}" title="users">Users</a></li>
                             <li><a href="{{ urlFor('admin.dashboard') }}" title="admin dashboard">Admin</a></li>
