--- a/app/templates/partials/build-table.twig
+++ b/app/templates/partials/build-table.twig
@@ -1,4 +1,4 @@
-<div class="overflow-container">
+<div>
     <table>
         <thead>
             <th></th>
@@ -50,7 +50,7 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="5">
+                <td colspan="7">
                     No builds found.
                 </td>
             </tr>
